--- a/web_site/journal_basic.css
+++ b/web_site/journal_basic.css
@@ -40,3 +40,12 @@ ul {
 	padding-left: 10px;
 	margin: 2px 10px 2px 5px;
 }
+
+div {
+	font-weight: normal;
+	font-family: "Century Gothic";
+	margin: 3px;
+	padding: 0px;
+	color: blue;
+	align-items: center;
+}
